styles.css
:root {
    --dark : #010003;
    --primary : #e4eae2;
    --primary-transparent : #e4eae298;
    --green : #39EE40;
    --dark-green :#3C961C;
    --grey-green : rgba(9, 111, 19, 0.36);
    
    /* max-width: 50vw; */
}

* {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto; 
    font-style: normal;
    /* display: block; */
    margin: 0;
    padding: 0;
}


html {
    font-size: 16px;
}

body {
    background-color: var(--primary);
    /* width: 100vw; */
}


h3 {
    font-size:2rem ;
    padding-block: 1rem;
}
h4 {
    font-size:1.75rem ;
    padding-block: 1rem;
}


img {
    width: min-content;
    height: min-content;
}

section {
    padding: 1em;
    padding-top: 0px;
    display: flex;
    flex-direction: column;
}



li {
    /* list-style-image: url('assets/img/tick.png'); */
    list-style-type: none;
    display: flex;
    flex-direction: row;
    /* flex-wrap: wrap; */
    gap: 0.5rem;
    padding-block: 0.5rem;
    align-items: center;
}



/* HEADER/HERO SECTION */
main {
    padding: 1em;
    min-height: 60vh;
    /* width: 100vw; */
    display: flex;
    flex-direction: column;
    /* background: #ace, url(/assets/img/bg-farm1.jpg); */
    background:linear-gradient(0deg, rgba(228, 234, 226, 0.85),#e4eae294), url(/assets/img/bg-farm1.jpg);

    background-size: cover; 
    background-position-x: 25%;
    background-position-y: 45%;
}

main.success { 
    background:linear-gradient(0deg, rgba(228, 234, 226, 0.85),#e4eae294), url(/assets/img/istock.webp); 
    
    background-position-x: 50%;
    background-position-y: 35%;
}





.button {
    padding: 0.5rem;
    background: linear-gradient(90deg, #39EE40, #3C961C);
    border: none;
    width: 100%;
    border-radius: 0.4rem;  
    font-size: 1rem;
    font-weight: 700; 
}

.home-header, .home-image {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    flex: 1;
    height: 100%;
}

.call-to-action-1 { 
    display: flex;
    flex-direction: column;
    /* gap: 1rem; */
    margin: 2rem;
    text-align: center;
    margin-block: 2rem;
}

.call-to-action-button {
    width: 100%;
    margin-block: 0.5em;
}
/* CONTENT/EXPERT SECTION */

.expert-header {
    text-align: center;
    padding-block: 1rem;
}

.expert-cards-container {
    display: flex;
    flex-direction: column;
}
.expert-card {
    display: flex;
    flex-direction: column;
    padding: 1.5em;
    padding-top: 1em;
    border-radius: 0.5rem;
    border-color: #3C961C;
    border-width: 1px;
    border-style: solid;
    margin-block:0.5rem ;
}
.content-section {
    flex-direction: column-reverse;
}

.content-section, .audience-section {
    overflow: hidden;
}


.bg-img {
    width: 100%;
}

.over-flowing-img {
    position: relative;
    left: -50px;
    padding: 0;
    width: 130%;
    height: 50%;
    padding-block: 1em;
}


.question {
    padding-top: 1em;
}

.question-button {
    /* margin-bottom: 0.5em; */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    transition: 0.4s;
}

.answer-panel{
    margin: 0.7em;
    margin-bottom: 0px;
    overflow: hidden;
    max-height: 0;
    /* transition: 0.4s; */
    transition: max-height 0.2s ease-out;
}

/* PAIEMENTS SECTION */
.paiment-headline {
    color: var(--green);
}

.offer-list {
    margin-inline: 2em;
    width: -webkit-fill-available;
    width: -moz-available;
}

.paiment-right {
    background-color: var(--grey-green);
    padding: 1em;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 0.5rem;
}

.paiment-text {
    font-size: 1.5em;
}

.offer-list-item {
    list-style-image: url('assets/img/tick.png');
    list-style-type:armenian;
}

.buy-button{
    background-color: var(--primary) !important;
    padding: 2rem;
    /* background: linear-gradient(90deg, #39EE40, #3C961C); */
    border: none;
    width: 100%;
    border-radius: 0.4rem;
    margin-top: 0.5rem;
    font-size: 1rem;
    font-weight: 700;
    cursor:pointer;
}

.normal-price {
    text-decoration: line-through;
    color: var(--dark-green);
}

.sales-price {
    font-size: 2em;
    font-weight: 700;
}
.pricing {
    text-align: center;
}

/* FOOTER */
footer {
    padding: 1em;
    font-size: 0.7em;
    border-top: #010003 solid 1px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
 

/* CSS FOR LARGE SCREENS AKA NOT PHONES */

@media  (width>850px) {
    html {
        font-size: 20px;
    }
    main {
        gap: 10rem;
        padding: 4rem;
        padding-block: 6rem;
        min-height: 80vh;
        align-items: center;
        display: flex;
        flex-direction: row;
        /* font-size: 2rem; */
    }

    
    main, .expert-cards-container ,.call-to-action-1 { 
        display: flex;
        flex-direction: row;
        
    }  

    /* Header */
    .home-header-title {
        font-size: 2.5rem;
    }
    p {
        font-size: 0.9rem;
    }

    .home-header-text {
        font-size: 1.1rem;
    }

    .call-to-action-1 {
        padding-top: 10rem;
        align-items: center;
    }
    .call-to-action-1>p {
        font-size: 0.7rem;
        text-align: justify; 
        width: 40%;
    } 
    .call-to-action-button {
        width: 75%;
        margin-block: 0.5em;
        padding: 1rem;
        padding-left: 0.5rem;
    }
    button {
        
        cursor:pointer;
    }
    .bg-img {
        /* padding-right: 15rem; */
        width: 80%;
    }
    
    /* Expert */
    .expert-cards-container {
        margin: 1rem;
    }
    .expert-card {
        margin-inline: 0.5rem;

    }

    /* AUDIENCE / CONTENT */
    .audience-section, .content-section {
        display: flex;
        flex-direction: row !important;
        justify-content: space-around;
        align-items: center;
        padding-block: 0px !important;
        margin-block: 2rem;
        background-color: white;
        
    }
    .audience-left, .audience-right,  .content-right,  .content-left {
        height: fit-content;
    }
    .over-flowing-img {
        padding-block: 0px; 
        padding-top: 4px;
        border-radius: 0.5rem;
    }

    /* FAQ */
    .FAQ{
         align-items: center;
    }
    .question {
        width: 40%;
    }
    .question-button  {
        padding: 1rem;
    }

    /* PAYMENT CONTENT */
    .payment-section {
        display: flex;
        flex-direction: row !important;
        justify-content: space-around;
        align-items: center;
        padding-block: 0px !important;
        margin-block: 2rem; 
    }
}

/* REDEEM */
.input {
    /* width: 50%; */
    border: none;
    border-radius: 0.5rem;
    height: 2rem;
    font-size: large;
    padding-inline: 1rem;
}

.input-zone {
    
    margin: 1rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: center;
    button {
        
    font-weight: 700;
    font-size: large;
    }
}

.loader {
    display: none;
    margin: auto;
    border-radius: 50%;
    border: 0.5rem solid green;
    border-top: 0.5rem solid var(--grey-green);
    width: 1rem;
    height: 1rem;
    animation: spinner 4s linear infinite;
}

@keyframes spinner {
    0% {transform: rotate(0deg);}
    100% {transform: rotate(360deg);}
}

dialog {
    border: none;
    border-radius: 15px;
    display: none;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
    margin: auto;
    position: absolute;
    top: 10%;
    text-align: center;
    /* background-color: #64ad67f7;  */
    background-color: #659555f2; 
    /* #659555f2 */
}

.dialog-button {
    padding: 0.5rem;
    background: white;
    border: none;
    width: 100%;
    border-radius: 0.4rem;
    font-size: medium; font-weight: 700;
}

.dialog-header-title{
    font-size: medium; font-weight: 700;
}

.loadingScreen {
    position: sticky;
    top: 0;
    z-index: 5;
    width: 100%;
    height: 100vh;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  }
 
  .loadingScreen > h1 img {
  width: 25px;
  animation:  rotateForever 2s infinite;
  }
  
  @keyframes rotateForever {
    from {
     transform: rotate(360deg);
    }
  }
  
  .loadingScreen > h1 {
  font-size: 3rem;
  font-family: 'Playfair Display', sans-serif;
  color: var(--dark-green);
  }

